2014-10-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/common/download_file.php
	  operation/contracts/contract_detail.php: Fixed
	bug #1385.

2014-10-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_db: Added missed '{'.

2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/mr/13.sql
	  operation/projects/project.php
	  operation/projects/project_detail.php
	  include/functions_db: Added 'CC' field
	to project detail. Ticket #1217.

2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/main_menu.php: Improved custom screens
	sections in header. Ticket #1231.

2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php: Fixed bug listing
	people involved in a project.

2014-10-08  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php
	  include/js/integria_crm.js
	  operation/companies/company_detail.php: Added project tab
	to company detail. Ticket #1241.

2014-10-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/mr/13.sql
	  godmode/grupos/configurar_grupo.php
	  godmode/grupos/lista_grupos.php
	  include/functions_incidents: Added 'Mail from' field
	to group. Ticket #1274.

2014-10-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php
	  include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_search.php: Added 'SLA' filter in
	search tickets. Ticket #1383.

2014-10-03  Vanessa Gil <vanessa.gil@artica.es>
	
	* general/header.php
	  godmode/setup/setup.php
	  include/functions_config.php: Added enable/disable check updates
	option in setup. Ticket #1386.

2014-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_dashboard_detail.php,
	  operation/common/download_file.php: Now the ticket creator
	and assigned users can download their ticket files and acccess
	to the quick ticket update as IW although they haven't permissions
	on that group.
